[package]
name = "opendal-webdav-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
opendal = { version = "0.55", features = [
    "services-azblob",
    "services-azdls",
    "services-cos",
    "services-fs",
    "services-gcs",
    "services-memory",
    "services-obs",
    "services-oss",
    "services-s3",
    "services-webdav",
] }
dav-server = "0.8"
dav-server-opendalfs = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
